
2021-09-13  Simon Sobisch <simonsobisch@gnu.org>

	* fextfh.c (fcd2_to_fcd3, fcd3_to_fcd2): extracted from (cob_sys_extfh)
	* fextfh.c: do FCD2<->FCD3 translation for both COBOL calls and C calls
	  to EXTFH
	* fextfh.c (copy_file_to_fcd, copy_fcd_to_file, copy_keys_fcd_to_file):
	  adjustments in conversion of internal/external file definition,
	  especially for incomplete FCD definitions
	* fileio.c (cob_read_dict, cob_key_def, cob_set_file_format), fileio.h:
	  functions do not set a file status directly any more, but return
	  a possible file status
	* fileio.c (cob_read_dict): return -1 if dictionary is not found;
	  don't call indexed_type in this case
	* fextfh.c (OP_GETINFO): if no dictionary is found for the file,
	  call indexed_type to get more details
	* fileio.c (cob_read_dict), fdbd.c (ix_bdb_open),
	  flmdb.c (lmdb_open): if no dictionary is found for the file,
	  assume "match" against file definition
	* fileio.c: minor adjustments for io-module loading
	* common.h, fextfh.c: definition and FCD2<->FCD3 translation for confFlags2
	  and lineCount (actual handling and tests open)

2021-09-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Some corrections for RELATIVE files and remove duplicated code
	* common.h: add flag_file_format to cob_module

2021-09-05  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Add check for record address being available

2021-08-30  Simon Sobisch <simonsobisch@gnu.org>

	* general: fix local includes to use "local" instead of <system>
	* reportio.c: remove unused variables/code,
	  remove duplicated includes coming from fileio.h
	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files

2021-08-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Adjust record size up to minimum for the file
	* fextfh.c: Only check for missing record address if an I/O request
	           Do not check for OPEN/CLOSE operations

2021-08-27  Simon Sobisch <simonsobisch@gnu.org>
